welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:2: error: too many arguments for method getCouleurSol: ()java.awt.Color
while(getCouleurSol(Color.green)!=false){
                   ^